--- a/angular-app/src/app/navbar/navbar.component.css
+++ b/angular-app/src/app/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 nav {
-    background-color: #333;
-    padding: 10px 0;
+    background-color: #f1f1f1;
+    padding: 5px 0;
   }
   
   ul {
@@ -11,19 +11,23 @@ nav {
   
   li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 10px;
   }
   
   a {
-    color: white;
+    color: black;
     text-decoration: none;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    border-radius: 5px 5px 0 0;
+    background-color: #fff;
   }
   
   a:hover {
-    color: yellow;
+    background-color: #eaeaea;
   }
   
-  .active {
-    font-weight: bold;
+  a.active {
+    background-color: #ccc;
   }
-  
