--- a/angular-app/src/app/navbar/navbar.component.html
+++ b/angular-app/src/app/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav>
+    <ul>
+      <li><a [routerLink]="['/']" routerLinkActive="active">Home</a></li>
+      <li><a [routerLink]="['/a2s']" routerLinkActive="active">A2S</a></li>
+    </ul>
+</nav>
